Dopesheet / Graph editor, select columns between markers doesn't appear to work #37146

Closed
opened 2013-10-19 02:12:38 +02:00 by Olson Burry · 3 comments

%%%--- Operating System, Graphics card ---

Linux 64 bit, GTX275

- Blender version with error, and version that worked ---

Tested 2.63RC2, SVN 60795, 2.68a, 2.67a, 2.63a, did not find one that worked

- Short description of error ---

In the dopesheet or graph editor, using Alt + K or choosing select -> columns between selected markers, isn't selecting the keys on the columns between the selected markers as indicated by the name

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

In the .blend file, two markers are preselected, alt + K or use the menu appears to just select all keys except the first, Shift + selecting different markers or changing the time cursor doesn't seem to have any effect.

Thanks :)

%%%

%%%--- Operating System, Graphics card --- Linux 64 bit, GTX275 - Blender version with error, and version that worked --- Tested 2.63RC2, SVN 60795, 2.68a, 2.67a, 2.63a, did not find one that worked - Short description of error --- In the dopesheet or graph editor, using Alt + K or choosing select -> columns between selected markers, isn't selecting the keys on the columns between the selected markers as indicated by the name - Steps for others to reproduce the error (preferably based on attached .blend file) --- In the .blend file, two markers are preselected, alt + K or use the menu appears to just select all keys except the first, Shift + selecting different markers or changing the time cursor doesn't seem to have any effect. Thanks :) %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in r60857, many thanks for the report! :)%%%

%%%Fixed in r60857, many thanks for the report! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37146
No description provided.