Fix [#37146] Dopesheet / Graph editor, select columns between markers doesn't appear to work.

Init min/max values were just switched...